# SMARN

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_memory_entries.py  0002_add_memory_importance_score.py  0003_add_indexes_and_observations.py
docs/deployment/: oracle-free-vm.md
scripts/: backup_db.sh  deploy.sh  restore_db.sh
src/smarn/: config.py  logging.py  main.py
src/smarn/api/: deps.py  routes.py
src/smarn/db/: models.py  session.py
src/smarn/memories/: analytics.py  answer.py  categories.py  embeddings.py  enrichment.py  llm.py  observations.py  repository.py  review.py  service.py  transcription.py  voice.py
src/smarn/telegram/: bot.py  voice_questions.py
tests/: test_analytics.py  test_answer_synthesis.py  test_categories.py  test_embeddings.py  test_enrichment.py  test_health.py  test_logging.py  test_observations.py  test_review.py  test_voice.py
